force-app/main/default/objects/car_inventory__c/car_inventory__c.object-meta.xml
<CustomObject>
    <label>car inventory</label>
    <nameField>
        <label>car inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>car inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>