force-app/main/default/objects/car_inventory__c/fields/Featured__c.field-meta.xml
<CustomField>
    <fullName>Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates if the car is featured for promotion.</description>
    <label>Featured</label>
    <type>Checkbox</type>
</CustomField>