force-app/main/default/objects/car_inventory__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <description>The make of the car (e.g., Honda, Toyota, Ford).</description>
    <label>Make</label>
    <length>10</length>
    <type>Text</type>
</CustomField>