force-app/main/default/objects/car_inventory__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>he model of the car (e.g., Civic, Camry, Mustang).</description>
    <label>Model</label>
    <length>10</length>
    <type>Text</type>
</CustomField>