force-app/main/default/objects/car_inventory__c/fields/sedan_transmission_type__c.field-meta.xml
<CustomField>
    <fullName>sedan_transmission_type__c</fullName>
    <description>he type of transmission used in the sedan (e.g., Automatic, 
Manual).</description>
    <label>sedan transmission type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>