force-app/main/default/objects/car_inventory__c/fields/SUV_capacity__c.field-meta.xml
<CustomField>
    <fullName>SUV_capacity__c</fullName>
    <description>The seating capacity of the SUV (e.g., 5-seater, 7-seater).</description>
    <label>SUV capacity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>