force-app/main/default/objects/car_inventory__c/fields/SUV_cargo_space__c.field-meta.xml
<CustomField>
    <fullName>SUV_cargo_space__c</fullName>
    <description>The cargo space of the SUV (e.g., 30 cubic feet, 50 cubic feet).</description>
    <label>SUV cargo space</label>
    <length>10</length>
    <type>Text</type>
</CustomField>