force-app/main/default/objects/car_inventory__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <description>The Vehicle Identification Number (VIN) of the car.</description>
    <label>VIN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>