force-app/main/default/objects/car_inventory__c/listViews/Available_cars.listView-meta.xml
<ListView>
    <fullName>Available_cars</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </filters>
    <label>Available cars</label>
</ListView>