force-app/main/default/objects/car_inventory__c/listViews/Sedan_cars.listView-meta.xml
<ListView>
    <fullName>Sedan_cars</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>car_inventory__c.Sedan</value>
    </filters>
    <label>Sedan cars</label>
</ListView>