force-app/main/default/objects/car_inventory__c/listViews/Sold_cars.listView-meta.xml
<ListView>
    <fullName>Sold_cars</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Sold</value>
    </filters>
    <label>Sold cars</label>
</ListView>