force-app/main/default/objects/car_inventory__c/listViews/SUV_cars.listView-meta.xml
<ListView>
    <fullName>SUV_cars</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>car_inventory__c.SUV</value>
    </filters>
    <label>SUV cars</label>
</ListView>